--- a/ConsoleAppN2TVmConverterH5/ConsoleAppN2TVmConverterH5.csproj
+++ b/ConsoleAppN2TVmConverterH5/ConsoleAppN2TVmConverterH5.csproj
@@ -43,7 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArithmeticCommands.cs" />
     <Compile Include="FileHandler.cs" />
+    <Compile Include="LogicalCommands.cs" />
     <Compile Include="Parser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
